refs web: correct URL to refs section of guide

--- a/python/fatcat_web/templates/refs_macros.html
+++ b/python/fatcat_web/templates/refs_macros.html
@@ -19,7 +19,7 @@
   <div class="header">
     Fuzzy reference matching is a work in progress!
   </div>
-  Read more about quality, completeness, and caveats <a href="https://guide.fatcat.wiki/#TODO">in the fatcat guide</a>.
+  Read more about quality, completeness, and caveats <a href="https://guide.fatcat.wiki/reference_graph.html">in the fatcat guide</a>.
 </div>
 
 <table class="ui table">
