add GET w/ query params to reference match endpoint (and JSON version)

--- a/python/fatcat_web/templates/reference_match.html
+++ b/python/fatcat_web/templates/reference_match.html
@@ -83,7 +83,9 @@
         <td class="">
           {% if match.access_options %}
             <a href="{{ match.access_options[0].access_url}}" class="ui tiny green active button">{{ match.access_options[0].access_type.name }}</a>
-            {% endif %}
+          {% else %}
+            <i class="ui tiny grey inactive button">no fulltext</a>
+          {% endif %}
   {% endfor %}
   </tbody>
   </table>
