--- a/python/fatcat_web/templates/container_view.html
+++ b/python/fatcat_web/templates/container_view.html
@@ -89,8 +89,8 @@
 {% endif %}
 
 <div class="ui segment attached">
-  <b>Type</b> &nbsp;{{ container.container_type or 'Unknown' }}
-  <b>Status</b> &nbsp;{{ container.publication_status or 'Unknown' }}
+  <b>Type</b> &nbsp;<code>{{ container.container_type or 'unknown' }}</code><br>
+  <b>Status</b> &nbsp;<code>{{ container.publication_status or 'Unknown' }}</code><br>
 </div>
 
 {% if container.issnl != None or container.issne != None or container.issnp != None or container.wikidata_qid != None %}
