web: minor typo correction

--- a/python/fatcat_web/templates/container_view.html
+++ b/python/fatcat_web/templates/container_view.html
@@ -90,7 +90,7 @@
 
 <div class="ui segment attached">
   <b>Type</b> &nbsp;<code>{{ container.container_type or 'unknown' }}</code><br>
-  <b>Status</b> &nbsp;<code>{{ container.publication_status or 'Unknown' }}</code><br>
+  <b>Status</b> &nbsp;<code>{{ container.publication_status or 'unknown' }}</code><br>
 </div>
 
 {% if container.issnl != None or container.issne != None or container.issnp != None or container.wikidata_qid != None %}
